k8s/ingressroutes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: default
spec: 
  entryPoints:
    - http
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend-service
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingressroute
  namespace: default
spec: 
  entryPoints:
    - http
  routes:
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend-service
          port: 5000
      middlewares:
      - name: stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitor-ingressroute
  namespace: default
spec: 
  entryPoints:
    - monitor
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api
